@@ -1,5 +1,5 @@
 /*
- *    Copyright 2006-2023 the original author or authors.
+ *    Copyright 2006-2025 the original author or authors.
  *
  *    Licensed under the Apache License, Version 2.0 (the "License");
  *    you may not use this file except in compliance with the License.
@@ -18,7 +18,6 @@ package org.mybatis.generator.api;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Properties;
-import java.util.stream.Collectors;
 
 import org.mybatis.generator.api.dom.java.Field;
 import org.mybatis.generator.api.dom.java.Interface;
@@ -39,7 +38,6 @@ import org.mybatis.generator.config.Context;
  * subsequent plugin is called.
  *
  * @author Jeff Butler
- *
  */
 public abstract class CompositePlugin implements Plugin {
     private final List<Plugin> plugins = new ArrayList<>();
@@ -78,7 +76,7 @@ public abstract class CompositePlugin implements Plugin {
         return plugins.stream()
                 .map(Plugin::contextGenerateAdditionalJavaFiles)
                 .flatMap(List::stream)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -86,7 +84,7 @@ public abstract class CompositePlugin implements Plugin {
         return plugins.stream()
                 .map(p -> p.contextGenerateAdditionalJavaFiles(introspectedTable))
                 .flatMap(List::stream)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -94,7 +92,7 @@ public abstract class CompositePlugin implements Plugin {
         return plugins.stream()
                         .map(Plugin::contextGenerateAdditionalKotlinFiles)
                 .flatMap(List::stream)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -102,7 +100,7 @@ public abstract class CompositePlugin implements Plugin {
         return plugins.stream()
                 .map(p -> p.contextGenerateAdditionalKotlinFiles(introspectedTable))
                 .flatMap(List::stream)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -110,7 +108,7 @@ public abstract class CompositePlugin implements Plugin {
         return plugins.stream()
                 .map(Plugin::contextGenerateAdditionalFiles)
                 .flatMap(List::stream)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -118,7 +116,7 @@ public abstract class CompositePlugin implements Plugin {
         return plugins.stream()
                 .map(p -> p.contextGenerateAdditionalFiles(introspectedTable))
                 .flatMap(List::stream)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -126,7 +124,7 @@ public abstract class CompositePlugin implements Plugin {
         return plugins.stream()
                 .map(Plugin::contextGenerateAdditionalXmlFiles)
                 .flatMap(List::stream)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -134,7 +132,7 @@ public abstract class CompositePlugin implements Plugin {
         return plugins.stream()
                 .map(p -> p.contextGenerateAdditionalXmlFiles(introspectedTable))
                 .flatMap(List::stream)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -1258,6 +1256,18 @@ public abstract class CompositePlugin implements Plugin {
             IntrospectedTable introspectedTable) {
         for (Plugin plugin : plugins) {
             if (!plugin.clientUpdateByPrimaryKeyMethodGenerated(kotlinFunction, kotlinFile, introspectedTable)) {
+                return false;
+            }
+        }
+
+        return true;
+    }
+
+    @Override
+    public boolean clientUpdateByPrimaryKeyMethodGenerated(Method method, Interface interfaze,
+            IntrospectedTable introspectedTable) {
+        for (Plugin plugin : plugins) {
+            if (!plugin.clientUpdateByPrimaryKeyMethodGenerated(method, interfaze, introspectedTable)) {
                 return false;
             }
         }
