@@ -1,5 +1,5 @@
 /*
- *    Copyright 2006-2022 the original author or authors.
+ *    Copyright 2006-2025 the original author or authors.
  *
  *    Licensed under the Apache License, Version 2.0 (the "License");
  *    you may not use this file except in compliance with the License.
@@ -17,7 +17,9 @@ package org.mybatis.generator.api.dom.kotlin.render;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.function.Function;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import org.mybatis.generator.api.dom.kotlin.KotlinFile;
 import org.mybatis.generator.api.dom.kotlin.KotlinNamedItem;
@@ -38,7 +40,7 @@ public class KotlinFileRenderer {
 
         lines.addAll(0, kotlinFile.getFileCommentLines());
         return lines.stream()
-                .collect(Collectors.joining(System.getProperty("line.separator"))); //$NON-NLS-1$
+                .collect(Collectors.joining(System.lineSeparator()));
     }
 
     private List<String> prependBlankLineIfNotEmpty(int currentLength, List<String> in) {
@@ -46,13 +48,14 @@ public class KotlinFileRenderer {
             return in;
         }
 
-        in.add(0, ""); //$NON-NLS-1$
-        return in;
+        return Stream.of(Stream.of(""), in.stream()) //$NON-NLS-1$
+                .flatMap(Function.identity())
+                .toList();
     }
 
     private List<String> renderImports(KotlinFile kotlinFile) {
         return kotlinFile.getImports().stream()
                 .map(s -> "import " + s) //$NON-NLS-1$
-                .collect(Collectors.toList());
+                .toList();
     }
 }
