@@ -1,5 +1,5 @@
 /*
- *    Copyright 2006-2022 the original author or authors.
+ *    Copyright 2006-2025 the original author or authors.
  *
  *    Licensed under the Apache License, Version 2.0 (the "License");
  *    you may not use this file except in compliance with the License.
@@ -29,7 +29,7 @@ public class KotlinFunctionRenderer {
         answer.add(renderFirstLine(function));
 
         answer.addAll(function.getCodeLines().stream().map(KotlinRenderingUtilities::kotlinIndent)
-                .collect(Collectors.toList()));
+                        .toList());
 
         if (!function.getCodeLines().isEmpty() && !function.isOneLineFunction()) {
             answer.add("}"); //$NON-NLS-1$
